--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@0,300;0,700&family=Spectral:ital,wght@0,200;0,400;0,600;0,700;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;600&family=Spectral:wght@200;400;600&display=swap');
+
 * {
   box-sizing: content-box;
   padding: 0;
@@ -7,8 +8,8 @@
 
 body {
   background-color: #252329;
-  // overflow-x: hidden;
-  font-family: 'Cormorant', serif;
+  font-family: 'Spectral', serif;
+  overflow: hidden;
 }
 
 body::-webkit-scrollbar {
