--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@
 body {
   background-color: #252329;
   font-family: 'Spectral', serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
