--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,7 +1,6 @@
 .footer {
-    position: absolute;
     width: 75vw;
-    height: 10vh;
+    height: 5vh;
     display: flex;
     justify-content: center;
     .footer-list {
@@ -14,7 +13,7 @@
         transition: .1s ease;
         color: #B0C6CE;
       }
-      .footer-list-item:hover{
+      .footer-list-item:active{
         color: #D7FDEC;
         text-shadow: 0 0 15px #50b9df;
       }
