--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
   box-sizing: content-box;
   padding: 0;
   margin: 0;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -14,4 +15,14 @@ body {
 
 body::-webkit-scrollbar {
   display: none;
+}
+
+::-moz-selection { /* Code for Firefox */
+  color: #252329;
+  background: #B2E4DB;
+}
+
+::selection {
+  color: #252329;
+  background: #B2E4DB;
 }
