--- a/src/Components/Future/Future.scss
+++ b/src/Components/Future/Future.scss
@@ -1,17 +1,14 @@
-// .future-box {
-//   display: flex;
-//   flex-direction: column;
-
-// }
+.future-box {
+  user-select: none;
+}
 .future {
   opacity: 0;
   animation: future 1s ease-in-out 0s forwards;
-  height: 90vh;
+  min-height: 85vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   .future-header {
-    height: 30vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,7 +32,7 @@
         cursor: pointer;
         font-size: 1.2em;
       }
-      .future-list-item:hover{
+      .future-list-item:active {
         color: #D7FDEC;
         text-shadow: 0 0 20px #50b9df;
         border-bottom: solid 1px #50b9df;
@@ -45,14 +42,14 @@
         text-shadow: 0 0 20px #50b9df;
         border-bottom: solid 1px #50b9df;
       }
-  }
+    }
   }
   .future-project {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    min-height: 55vh;
     position: relative;
     bottom: 5vh;
     .future-project-textbox {
@@ -102,7 +99,7 @@
         transition: .15s ease;
         font-size: 1.1em;
       }
-      .future-project-techstack-list-item:hover {
+      .future-project-techstack-list-item:active {
         color: #D7FDEC;
         text-shadow: 0 0 20px #50b9df;
       }
@@ -130,13 +127,90 @@
 }
 
 .footer-futurelocation {
-  position: absolute;
-  bottom: 10vh;
-  left: 12.5vw;
   opacity: 0;
   animation: footer 1s ease-in-out 0s forwards;
   @keyframes footer {
     0% {opacity: 0;}
     100% {opacity: 1;}
+  }
+}
+
+@media (max-width: 799px) {
+  .future {
+    .future-project {
+      position: static;
+      flex-direction: column;
+      .future-project-textbox {
+        width: 90vw;
+      }
+      .future-project-techstack {
+        width: calc(90vw - 40px);
+        margin-top: 5vh;
+        .future-project-techstack-list {
+          display: grid;
+          grid-template-columns: auto auto;
+        }
+      }
+    }
+    .future-header {
+      margin-bottom: 5vh;
+      .future-title {
+        font-size: 2.5em;
+      }
+      .future-list {
+        justify-content: space-around;
+        .future-list-item {
+          margin: 0;
+          font-size: 1em;
+        }
+      }
+    }
+  }
+  .footer-futurelocation {
+    margin-top: 2.5vh;
+  }
+}
+
+@media (min-width: 800px) {
+  .future-list-item:hover {
+    color: #D7FDEC !important;
+    text-shadow: 0 0 20px #50b9df;
+    border-bottom: solid 1px #50b9df !important;
+  }
+  .future-project-techstack-list-item:hover {
+    color: #D7FDEC !important;
+    text-shadow: 0 0 20px #50b9df;
+  }
+
+  .future {
+    .future-header {
+      height: 30vh;
+    }
+  }
+}
+
+@media (min-width: 1400px) {
+  .future {
+    .future-header{ 
+      .future-list {
+        .future-list-item {
+          font-size: 1.2em;
+        }
+      }
+    }
+    .future-project {
+      .future-project-textbox {
+        .future-project-textbox-text {
+          font-size: 1.2em;
+        }
+      }
+      .future-project-techstack {
+        .future-project-techstack-list {
+          .future-project-techstack-list-item {
+            font-size: 1.2em;
+          }
+        }
+      }
+    }
   }
 }
