--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -1,12 +1,14 @@
 .projects {
+    min-height: 85vh;
+    position: relative;
+    top: 5vh;
     display: flex;
     flex-direction: row;
     opacity: 0;
     animation: projects 1s ease-in-out 0s forwards;
     .info-box {
         width: 50vw;
-        height: 90vh;
-        margin: 0 5vw 0 10vw;
+        margin: 0 5vw 0 15vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -36,7 +38,7 @@
                 border-bottom: solid 1px #65e1ca;
                 transition: .15s ease;
             }
-            .info-box-list-link:hover {
+            .info-box-list-link:active {
                 color: #D7FDEC;
                 text-shadow: 0 0 20px #50b9df;
                 border-bottom: solid 1px #50b9df;
@@ -44,13 +46,11 @@
         }
     }
     .projects-menu {
-        height: 90vh;
         width: 20vw;
-        margin: 0 10vw 0 5vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         .projects-title {
             color: #B2E4DB;
             font-size: 3em;
@@ -66,7 +66,7 @@
                 transition: .15s ease;
                 cursor: pointer;
             }
-            .projects-menu-list-item:hover {
+            .projects-menu-list-item:active {
                 color: #D7FDEC;
                 text-shadow: 0 0 20px #50b9df;
             }
@@ -90,4 +90,80 @@
 @keyframes projects {
     0% {opacity: 0;}
     100% {opacity: 1;}
+}
+
+.footer-projectlocation {
+    opacity: 0;
+    animation: footer 1s ease-in-out 0s forwards;
+    @keyframes footer {
+      0% {opacity: 0;}
+      100% {opacity: 1;}
+    }
+}
+
+@media (max-width: 799px) {
+    .projects {
+        flex-direction: column-reverse;
+        .info-box {
+            margin-left: 10vw;
+            min-height: 60vh;
+            width: 80vw;
+            margin-bottom: 5vh;
+        }
+        .projects-menu {
+            width: 100vw;
+            flex-direction: row;
+            margin-bottom: 2vh;
+            .projects-title {
+                display: flex;
+                justify-content: flex-end;
+                font-size: 2.5em;
+                padding-right: 1rem;
+                width: 45vw;
+            }
+            .projects-menu-list {
+                width: 45vw; 
+                .projects-menu-list-item {
+                    user-select: none;
+                }   
+            }
+        }
+    }
+}
+
+@media (min-width: 800px) {
+    .info-box-list-link:hover {
+        color: #D7FDEC !important;
+        text-shadow: 0 0 20px #50b9df;
+        border-bottom: solid 1px #50b9df !important;
+    }
+    .projects-menu-list-item:hover {
+        color: #D7FDEC;
+        text-shadow: 0 0 20px #50b9df;
+    } 
+}
+
+@media (min-width: 1400px) {
+    .projects {
+        .info-box {
+            .info-box-title {
+                font-size: 3em;
+            }
+            .info-box-text {
+                font-size: 1.2em;
+            }
+            .info-box-list {
+                .info-box-list-item {
+                    font-size: 1.2em;
+                }
+            }
+        }
+        .projects-menu {
+            .projects-menu-list {
+                .projects-menu-list-item {
+                    font-size: 1.2em;
+                }
+            }
+        }
+    }
 }
